Update version de jacoco and akka circuitbreak